refactor: change file structure of proto files
